--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,16 +1,17 @@
-name: CI Tests
+name: Run Tests & Auto Merge
 
 on:
-  pull_request:
-    branches: [main]
   push:
     branches:
-      - main
       - 'feature/**'
 
 jobs:
-  test:
+  test_and_auto_merge:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -18,3 +19,24 @@ jobs:
           node-version: '20'
       - run: npm install
       - run: npm test
+
+      # PRを作成
+      - name: Create Pull Request
+        id: create-pr
+        uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          base: main
+          branch: ${{ github.ref_name }}
+          delete-branch: true
+          title: "Auto Merge: ${{ github.ref_name }}"
+          body: "テストが成功したため、自動マージします。"
+
+      # 自動マージを有効化（GitHubのAutoMerge機能）
+      - name: Enable Automerge
+        if: steps.create-pr.outputs.pull-request-number
+        uses: peter-evans/enable-pull-request-automerge@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          pull-request-number: ${{ steps.create-pr.outputs.pull-request-number }}
+          merge-method: squash
